k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: admin
        image: acrecomsomyaea123.azurecr.io/admin-service:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
  - port: 80
    targetPort: 80
