k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: auth
        image: acrecomsecure12345.azurecr.io/auth-service:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - port: 80
    targetPort: 80
