k8s/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: cart
        image: acrecomsomyaea123.azurecr.io/cart-service:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
  - port: 80
    targetPort: 80
