k8s/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: catalog
        image: acrecomsomyaea123.azurecr.io/catalog-service:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: catalog
  ports:
  - port: 80
    targetPort: 80
