k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: order
        image: acrecomsecure12345.azurecr.io/order-service:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
  - port: 80
    targetPort: 80
