k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: payment
        image: acrecomsecure12345.azurecr.io/payment-service:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
  - port: 80
    targetPort: 80
